--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ HOST_NAME=template-web
 PHP_IDE_CONFIG=serverName=$HOST_NAME
 
 DATABASE_HOST=template-database
-DATABASE_PORT=3306
+DATABASE_PORT=8081
 DATABASE_USER=root
 DATABASE_PASSWORD=root
-DATABASE_NAME=template
-DATABASE_URL=mysql://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
+MONGODB_DB=template
+MONGODB_URL=mongodb://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/?authSource=auth-db
